--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.minemanmods</groupId>
     <artifactId>MinemanUtilities</artifactId>
-    <version>0.0.7</version>
+    <version>0.0.8</version>
 
     <name>Mineman Utilities</name>
     <description>Some utilities for Minecraft.</description>
@@ -63,6 +63,11 @@
             <artifactId>spigot</artifactId>
             <version>1.12-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
     </dependencies>
 
